--- a/style.css
+++ b/style.css
@@ -37,3 +37,13 @@ nav ul li a{
 body, html { 
     height: 100%;
 }
+
+.bg{
+    background: url("img/Screenshot 2024-05-21  094332.png") ;
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+}
