--- a/style.css
+++ b/style.css
@@ -47,3 +47,16 @@ body, html {
     background-repeat: no-repeat;
     background-size:cover;
 }
+
+.bg h1 {
+    text-align: center;
+    font-size: 4rem;
+    margin-top: 300px;
+    color: orange
+    text-shadow: 2px 2px #000000;
+    padding-top: 20px;
+}
+
+.info {
+    margin:20px 200px;
+}
