--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body, html {
 }
 
 .bg{
-    background: url("img/Screenshot 2024-05-21  094332.png") ;
+    background: url("photots/Screenshot\ 2024-05-21\ 094332") ;
     display: flex;
     flex-direction: column;
     height: 90vh;
