--- a/style.css
+++ b/style.css
@@ -72,6 +72,156 @@ body, html {
 }
 
 nav ul li a:hover {
-    color:whitesmoke
+    color:whitesmoke;
     transition: 0.8s;
 }
+
+
+.bg2 { 
+
+    background: url ("photots\Screenshot 2024-05-21 094332.jpg")
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
+    background-position: center;
+    background-repeat: n
+    o-repeat;
+    background-size:cover;
+}
+
+style.css
+/* Reset Website standard values */
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat' , sans-serif
+}
+
+/* Home Page */
+
+/* Background image for home page */
+.header {
+    min-height: 100 vh
+    width: 100%
+    background-image: linear-gradient (rgba (4, 9, 30, 0.7)rgba(4, 9, 30, 0.7)),
+    url (photots\Screenshot 2024-05-21 094332.jpg);
+    background-position: center;
+    baclground-size: cover;
+    position: relative;
+}
+
+/* Navigation */
+.nav {
+
+    display: flex;
+    padding: 2% 6%;
+    justify-content:space-between;
+    align-items: center;
+
+}
+
+.nav img  {
+
+    flex: 1;
+    text-align: right;
+}
+
+nav-links ul {
+    list-style: none;
+}
+
+nav-links ul li {
+    list-style: none;
+}
+
+.nav-links ul li {
+    display: inline-block;
+    padding: 8px 12px;
+}
+
+.nav-links ul li a {
+    text-decoration: none;
+    color:orange
+    font-size: 20px;
+}
+
+.nav-links ul li::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    backkground: #fff;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-links ul li:hover::after {
+
+    width: 100%;
+}
+
+/* Text box and button styles */
+.text-box-indext {
+
+    width: 90%;
+    color:orange
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) ;
+    text-align: center;
+}
+
+.text-box-index h1 {
+    font-size: 64px;
+    text-decoration: underline;
+}
+
+text-box-index p {
+    margin: 50px 3px;
+    font-size: 30px;
+    color:#fff
+}
+
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color:#fff
+    border: 1px solid #fff;
+    padding: 10px 50px;
+    font-size: 30px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.signup-form-box {
+    border: 1px solid #ccc;
+    margin: 300px 0 0;
+    padding: 10px 20px;
+}
+
+.signup-form-box h3 {
+    text-align: center;
+    font-size: 50px;
+    font-style: oblique;
+    
+}
+
+.signup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.signup-form input,
+.signup-form textarea {
+    width: 60%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+
